--- a/frontend/src/app/layout/home/home.component.html
+++ b/frontend/src/app/layout/home/home.component.html
@@ -15,8 +15,8 @@
           <img [src]="images[1]" alt="img_home_Eurovision" class="carousel-image opacity_100 rounded mh-100" style="width: 100%; height: 80vh"/>
         </div>
         <div class="carousel-caption">
-          <h3 class="text1">Pure Beauty Oasis</h3>
-          <p class="text1">Donde la Belleza y la Relajación se Encuentran</p>
+          <h3 class="text_carousel">Pure Beauty Oasis</h3>
+          <p class="text_carousel">Donde la Belleza y la Relajación se Encuentran</p>
         </div>
       </ng-template>
       <ng-template ngbSlide>
