--- a/frontend/src/app/features/user/user-list/user-list.component.css
+++ b/frontend/src/app/features/user/user-list/user-list.component.css
@@ -28,3 +28,12 @@
 .card-cover:hover {
     opacity: 0.8; /* Cambia la opacidad al pasar el ratón por encima */
 }
+.text_user_list {
+  color: #FFFFFF;
+  text-shadow:
+  -1px -1px 0 #000000,  
+  1px -1px 0 #000000,
+  -1px 1px 0 #000000,
+  1px 1px 0 #000000; /* Crear un borde de color */
+  /* Iba puesto en la linea 12 text-white text-shadow-1*/
+}
