--- a/frontend/src/app/features/user/user-list/user-list.component.html
+++ b/frontend/src/app/features/user/user-list/user-list.component.html
@@ -1,45 +1,46 @@
-
 <div class="container px-4 py-5" id="custom-cards">
-    <h2 class="text-center">Lista de usuarios/as registrados <i class="bi bi-people-fill"></i>
-    </h2>
-  
-    <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
-  
-      @for (user of users; track user.id) {
-        <div class="col">
-          <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg"
-          [style.background-image]="'url(http://localhost:3000/uploads/' + user.photoUrl + ')'">
-          <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
-              <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">{{user.fullName}}</h3>
-              <ul class="d-flex list-unstyled mt-auto">
-                
-                <div _ngcontent-shq-c54="" class="exam-card-item_bg" style="background-color: rgb(241, 224, 90);">
+  <h2 class="text-center">Lista de usuarios/as registrados <i class="bi bi-people-fill"></i>
+  </h2>
+
+  <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
+
+    @for (user of users; track user.id) {
+    <div class="col">
+      <!--<div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg"
+          [style.background-image]="'url(http://localhost:3000/uploads/' + user.photoUrl + ')'"> -->
+      <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg"
+      [ngStyle]="{'background-image': user.photoUrl ? 'url(http://localhost:3000/uploads/' + user.photoUrl + ')' : 'url(/assets/img_home/logo_bastbeauty.png)'}">
+
+        <div class="d-flex flex-column h-100 p-5 pb-3 text_user_list">
+          <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">{{user.fullName}}</h3>
+          <ul class="d-flex list-unstyled mt-auto">
+
+            <div _ngcontent-shq-c54="" class="exam-card-item_bg" style="background-color: rgb(241, 224, 90);">
 
 
-                </div>
-                <li class="me-auto">
-                  <button class="btn btn_user2 btn-sm fs-6 me-2" [routerLink]="['/users', user.id, 'detail']">
-                    Ver
-                  </button>
-
-                  <button class="btn btn_user2 btn-sm fs-6" [routerLink]="['/users', user.id, 'update']">
-                    Editar
-                  </button>
-
-                </li>
-                <li class="d-flex align-items-center me-3">
-                  <small>{{user.postalCode}}</small>
-                </li>
-                <li class="d-flex align-items-center">
-                  <small>{{user.city}}</small>
-                </li>
-              </ul>
             </div>
-          </div>
+            <li class="me-auto">
+              <button class="btn btn_user2 btn-sm fs-6 me-2" [routerLink]="['/users', user.id, 'detail']">
+                Ver
+              </button>
+
+              <button class="btn btn_user2 btn-sm fs-6" [routerLink]="['/users', user.id, 'update']">
+                Editar
+              </button>
+
+            </li>
+            <li class="d-flex align-items-center me-3">
+              <small>{{user.postalCode}}</small>
+            </li>
+            <li class="d-flex align-items-center">
+              <small>{{user.city}}</small>
+            </li>
+          </ul>
         </div>
-      }
-  
-  
+      </div>
     </div>
+    }
+
+
   </div>
-  
+</div>
