rolan_1 Frontend-footer modificado y FINALIZADO

--- a/frontend/src/app/layout/footer/footer.component.html
+++ b/frontend/src/app/layout/footer/footer.component.html
@@ -1,5 +1,4 @@
-<footer class="">
-
+<!-- <footer class="">
   <div class="d-flex flex-column flex-sm-row justify-content-center justify-content-sm-between align-items-center bg-custom">
     <p class="text-center text-sm-start m-3 fs-6">© 2024 Company, Inc. All rights reserved.</p>
 
@@ -8,37 +7,106 @@
     <ul class="list-unstyled d-flex justify-content-center justify-content-sm-end align-items-center m-2 me-3">
       <li class="ms-3">
         <a class="link-body-emphasis" href="https://www.marcoaldany.com/" target="_blank">
-          <i class="bi bi-whatsapp fs-4"></i>
+          <i class="bi bi-whatsapp fs-5"></i>
         </a>
       </li>
       <li class="ms-3">
         <a class="link-body-emphasis" href="https://www.marcoaldany.com/" target="_blank">
-          <i class="bi bi-facebook fs-4"></i>
+          <i class="bi bi-facebook fs-5"></i>
         </a>
       </li>
 
       <li class="ms-3">
         <a class="link-body-emphasis" href="https://www.treatwell.es/" target="_blank">
-          <i class="bi bi-instagram fs-4"></i>
+          <i class="bi bi-instagram fs-5"></i>
         </a>
       </li>
 
       <li class="ms-3">
         <a class="link-body-emphasis" href="https://www.treatwell.es/" target="_blank">
-          <i class="bi bi-tiktok fs-4"></i>
+          <i class="bi bi-tiktok fs-5"></i>
         </a>
       </li>
       <li class="ms-3">
         <a class="link-body-emphasis" href="https://www.marcoaldany.com/" target="_blank">
-          <i class="bi bi-twitter-x fs-4"></i>
+          <i class="bi bi-twitter-x fs-5"></i>
         </a>
       </li>
 
       <li class="ms-3">
         <a class="link-body-emphasis" href="https://www.marcoaldany.com/" target="_blank">
-          <i class="bi bi-linkedin fs-4"></i>
+          <i class="bi bi-linkedin fs-5"></i>
         </a>
       </li>
     </ul>
+  </div>
+</footer> -->
+
+<footer class="footer">
+  <div class="container">
+    <div class="row justify-content-center">
+      <!-- Columna con dos imágenes -->
+      <div class="col-sm-4 col-md-4 col-lg-4 col-xl-4 text-center">
+        <!-- Primera imagen -->
+        <div class="logo-container2 img_adecco mb-2">
+          <img src="/assets/img_home/Agencia_empleo.png" alt="Imagen 1" class="img-fluid">
+        </div>
+        <!-- Segunda imagen -->
+        <div class="logo-container2 img_adecco">
+          <img src="/assets/img_home/fundacion-adecco-logo.png" alt="Imagen 2" class="img-fluid">
+        </div>
+        <p class="mt-2 mb-0 fw-medium text-decoration-underline">COLABORADORES</p>
+        <p class="my-0">Pilar López de Benito</p>
+        <p class="my-0">Carmen Espeso Ladrón de Guevara</p>
+        <p class="my-0 fw-medium text-decoration-underline">PROFESOR</p>
+        <p class="my-0">Alan Sastre</p>
+        <p class="my-0 fw-medium text-decoration-underline">TECNOLOGÍAS UTILIZADAS</p>
+        <p class="my-0">Angular-Bootstrap-Nest-Github-VSC-SQL</p>
+
+
+      </div>
+
+      <!-- Columna con una imagen -->
+      <div class="col-sm-4 col-md-4 col-lg-4 col-xl-4 text-center">
+        <!-- Tercera imagen -->
+        <div class="logo-container">
+          <img src="/assets/img_home/logo_bastbeauty2.png" alt="Imagen 3" class="img-fluid">
+          <p class="mt-2 mb-1">FAQ - TÉRMINOS Y CONDICIONES - AVISO DE PRIVACIDAD</p>
+          <p class="my-0">© 2024 BastBeauty, Inc. All rights reserved.</p>
+        </div>
+      </div>
+
+      <!-- Columna con iconos y texto -->
+      <div class="col-sm-4 col-md-4 col-lg-4 col-xl-4">
+        <div class="text-center">
+          <!-- Aquí puedes colocar tus iconos y texto -->
+          <p class="mb-1">SÍGUENOS</p>
+          <a href="https://api.whatsapp.com/send?phone=TuNumero" class="text_footer" target="_blank">
+            <i class="bi bi-whatsapp me-2 fs-4"></i>
+          </a>
+          <a href="https://www.facebook.com/tuPerfil" class="text_footer" target="_blank">
+            <i class="bi bi-facebook me-2 fs-4"></i>
+          </a>
+          <a href="https://www.tiktok.com/@tuUsuario" class="text_footer" target="_blank">
+            <i class="bi bi-tiktok ms-1 fs-4"></i>
+          </a>
+          <a href="https://twitter.com/tuUsuario" class="text_footer" target="_blank">
+            <i class="bi bi-twitter-x ms-2 fs-5"></i>
+          </a>
+          <a href="https://www.instagram.com/tuUsuario" class="text_footer" target="_blank">
+            <i class="bi bi-instagram ms-2 fs-4"></i>
+          </a>
+          <a href="https://www.linkedin.com/in/tuPerfil" class="text_footer" target="_blank">
+            <i class="bi bi-linkedin ms-2 fs-4"></i>
+          </a>
+          <p class="text-decoration-underline mt-3 mb-2">CONTACTO</p>
+          <p class="my-2">919345679 - 690234567</p>
+          <button (click)="volverArriba()" class="btn btn_footer">VOLVER ARRIBA</button>
+          <p class="mt-2 mb-0 fw-medium text-decoration-underline">GRUPO 4 - DEVELOPERS</p>
+          <p class="my-0">Jana Vasquez - Diana Gómez</p>
+          <p class="my-0">Rolando Cepeda - Emilia Alcántara</p>
+        </div>
+      </div>
+    </div>
   </div>
 </footer>
