--- a/frontend/src/app/layout/footer/footer.component.css
+++ b/frontend/src/app/layout/footer/footer.component.css
@@ -1,4 +1,4 @@
-.bg-custom {
+/*.bg-custom {
     background-color:black;
 }
 .footer {
@@ -10,4 +10,57 @@
 }
 .bi {
   color: #CCA831;
+} */
+
+
+.footer {
+  background-color: #000000; /* Fondo negro */
+  color: #b7b7b7; /* Color de texto gris claro */
+  padding: 20px 0; /* Espaciado superior e inferior para el footer */
 }
+
+/* Opcional: Agregar algo de espacio entre los logos y el texto */
+.footer .col-sm-4 {
+  padding: 10px; /* Añade un poco de padding a cada columna para espaciado */
+}
+.logo-container img {
+  max-width: 100%; /* Esto asegura que la imagen no exceda el ancho del contenedor */
+  height: auto; /* Esto mantiene la proporción de la imagen */
+}
+.text_footer {
+  color: #CCA831;
+}
+.btn_footer {
+  color: #CCA831; /* Cambia #FF0000 por tu color personalizado */
+  border-color: #CCA831; /* Usa el mismo color para el borde */
+  border-radius: 30px;
+  background-color: #000000;
+}
+.btn_footer:hover {
+  color: #000000;/* Cambia el color del texto al pasar el ratón por encima, por ejemplo, a blanco */
+  border-color: #000000;
+  background-color: #CCA831; /* Color de fondo al pasar el ratón por encima */
+}
+.img_adecco {
+  border-radius: 2px; /* Opcional: Añade bordes redondeados para un aspecto más suave */
+  background-color: white;
+}
+.logo-container2 {
+  width: 50%; /* Ajusta esto según el tamaño deseado */
+  margin: 0 auto; /* Centra el div horizontalmente */
+}
+@media (max-width: 576px) { /* Ajustes específicos para pantallas pequeñas */
+  .logo-container img {
+    max-width: 25%; /* Reduce el tamaño máximo de la imagen a la mitad en pantallas pequeñas */
+  }
+}
+@media (min-width: 992px) { /* Ajustes específicos para pantallas grandes */
+  .logo-container img {
+    max-width: 75%; /* Reduce el tamaño máximo de la imagen a la mitad en pantallas grandes */
+  }
+}
+
+
+
+
+
