--- a/frontend/src/app/features/category/category-form/category-form.component.html
+++ b/frontend/src/app/features/category/category-form/category-form.component.html
@@ -58,7 +58,7 @@
         </div>
 
 
-        <button class="w-100 btn btn-primary btn-lg" type="submit">Guardar</button>
+        <button class="w-100 btn btn-category2 " type="submit"> Guardar </button>
 
       </form>
 
