--- a/frontend/src/app/features/company/company-list/company-list.component.html
+++ b/frontend/src/app/features/company/company-list/company-list.component.html
@@ -42,15 +42,17 @@
                 <i class="bi bi-eye"></i>
                 Ver detalle
               </button>
+
+            
+            @if(isAdmin) {
               <button class="btn btn_company me-2" [routerLink]="['/companies', company.id, 'update']">
                 <i class="bi bi-pencil"></i>
                 Editar
               </button>
-
-
+            }
             </td>
           </tr>
-          }
+        }
         </tbody>
       </table>
     </div>
