--- a/frontend/src/app/layout/home/home.component.html
+++ b/frontend/src/app/layout/home/home.component.html
@@ -2,8 +2,8 @@
   @if (images) {
     <ngb-carousel>
       <ng-template ngbSlide>
-        <div class="picsum-img-wrapper">
-          <img [src]="images[0]" alt="img_company_pelu 3" class="carousel-image opacity-100 rounded mh-100" style="width: 100%; height: 80vh"/>
+        <div class="picsum-img-wrapper" style="height: 80vh; display: flex; align-items: center; justify-content: center;">
+          <img [src]="images[0]" alt="img_company_pelu 3" class="carousel-image">
         </div>
         <div class="carousel-caption">
           <h3>Nail & Hair Haven</h3>
@@ -11,8 +11,8 @@
         </div>
       </ng-template>
       <ng-template ngbSlide>
-        <div class="picsum-img-wrapper">
-          <img [src]="images[1]" alt="img_home_Eurovision" class="carousel-image opacity_100 rounded mh-100" style="width: 100%; height: 80vh"/>
+        <div class="picsum-img-wrapper" style="height: 80vh; display: flex; align-items: center; justify-content: center;">
+          <img [src]="images[1]" alt="img_company_pelu 3" class="carousel-image">
         </div>
         <div class="carousel-caption">
           <h3 class="text_carousel">Pure Beauty Oasis</h3>
@@ -20,8 +20,8 @@
         </div>
       </ng-template>
       <ng-template ngbSlide>
-        <div class="picsum-img-wrapper">
-          <img [src]="images[2]" alt="img_company_pelu 9" class="carousel-image opacity-100 rounded mh-100" style="width: 100%; height: 80vh"/>
+        <div class="picsum-img-wrapper" style="height: 80vh; display: flex; align-items: center; justify-content: center;">
+          <img [src]="images[2]" alt="img_company_pelu 3" class="carousel-image">
         </div>
         <div class="carousel-caption">
           <h3>Elegance & Nails Studio </h3>
