--- a/frontend/src/app/features/booking/booking-detail/booking-detail.component.html
+++ b/frontend/src/app/features/booking/booking-detail/booking-detail.component.html
@@ -1,47 +1,32 @@
-<div class="container">
-  <div class="row">
-    @if(booking) {
-    <div class="col tex-center mt-5">
-    <div class="reservation-details text-center">
-      <div class="product-image">
-        <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg"
-        [style.background-image]="'url(http://localhost:3000/uploads/' + booking?.treatment?.image">
-        @if(booking?.treatment) {
-        <div class="user-info gold-text bordered-text">
-          <h2>Tu reserva</h2>
-          <p>{{booking?.treatment?.title}}</p>
-        </div>
-        <div class="product-info gold-text bordered-text">
-          <h2>Centro de belleza</h2>
-          <p>{{booking?.company?.name}}</p>
-        </div>
-        <div class="reservation-info gold-text bordered-text">
-          <h2>Fecha y Hora de la Reserva</h2>
-          <p>{{booking?.startDate}}</p>
-        </div>
-        <div class="price-info gold-text bordered-text">
-          <h2>Precio</h2>
-          <p>{{booking?.treatment?.price}}€</p>
-        </div>
-        <button
-                  type="button"
-                  class="btn btn-outline-info"
-                  style="margin: 10px"
-                  (click)="delete(booking)"
-                >
-                  Cancelar reserva
-                </button>
-      }
-        </div>
+@if(booking){
+  <h1 class="text-center text-emphasis mt-4 mb-4"> Tú reserva </h1>
+  <div class="card mb-3 text-emphasis border-warning border-1 shadow">
+    <div class="row">
 
-       <!-- @if(booking?.treatment?.image) {
-        <img class="img-fluid"
-        [src]="'http://localhost:3000/uploads/' + booking?.treatment?.image" alt="Random first slide" />
-        } -->
+      <div class="col-sm-12 col-md-12 col-lg-4">
+        <div class=" text-center">
+          <img class="d-block  mb-4  mt-2 ml-2 rounded-2"
+          [src]="'http://localhost:3000/uploads/' + booking.treatment?.image" alt="category"
+          style="max-width:350px">
+        </div>
       </div>
-
+      <div class="col-sm-12 col-md-12 col-lg-8">
+        <div class=" text-center">
+          <h1 class="display-5 fw-bold text-body-emphasis">{{booking.treatment?.title}}</h1>
+          <div class="col-lg-6 mx-auto">
+            <p class="lead mb-4"><strong>Centro de belleza:</strong> {{booking.treatment?.company?.name}}. </p>
+            <p class="lead mb-4"><strong>Tu cita es el dia </strong> {{booking.startDate}}€. </p>
+            <p class="lead mb-4"><strong>Precio:</strong> {{booking.treatment?.price}}€. </p>
+             <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+                <button type="button"
+                class="btn btn-outline-info"
+                style="margin: 10px"
+                (click)="delete(booking)"> Cancelar reserva </button>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-    </div>
-  }
   </div>
-</div>
+    }
+
