--- a/frontend/src/app/features/booking/booking-form/booking-form.component.html
+++ b/frontend/src/app/features/booking/booking-form/booking-form.component.html
@@ -2,10 +2,10 @@
   <div class="row">
     <div class="col-lg-7">
       @if(isUpdate){
-        <h1 class="mt-4 mb-4 text-center text-primary-emphasis">Actualizar o editar reserva</h1>
+        <h1 class="mt-4 mb-4 text-center text-emphasis">Actualizar o editar reserva</h1>
       } @else {
-        <h1 class="mt-4 mb-4 text-center text-primary-emphasis">Crear reserva</h1>
-      } 
+        <h1 class="mt-4 mb-4 text-center text-emphasis">Crear reserva</h1>
+      }
       @if(showConfirmMessage) {
         <ngb-alert type="success" [dismissible]="false" class="mt-5" style="min-height:200px">
           Has completado tu reserva de {{booking?.treatment?.title}}.
@@ -34,13 +34,13 @@
             <button class="btn btn-outline-secundary bi bi-calendar3" (click)="d.toggle()" type="button"></button>
           </div> -->
           <div class="form-floating mb-3">
-            <input type="datetime-local" class="form-control"
+            <input type="datetime-local" class="form-control border-warning border-1 shadow"
             id="endDate" formControlName="endDate"
             placeholder="yyyy-mm-dd">
             <label for="endDate">Fecha fin</label>
           </div>
           <div class="form-floating mb-3">
-            <select class="form-select"
+            <select class="form-select border-warning border-1 shadow"
             id="company"
             formControlName="company"
             [compareWith]="compareObjects"
@@ -53,7 +53,7 @@
           <label for="company">Centro de belleza</label>
           </div>
           <div class="form-floating mb-3">
-            <select class="form-select"
+            <select class="form-select border-warning border-1 shadow"
             id="treatment"
             formControlName="treatment"
             [compareWith]="compareObjects"
@@ -68,53 +68,53 @@
           </div>
           <div class="form-floating mb-3">
             <input type="number" min="0" step="0.1"
-            class="form-control" id="price"
+            class="form-control border-warning border-1 shadow" id="price"
             formControlName="price" placeholder="">
             <label for="price">Precio (€)</label>
           </div>
           <div class="form-floating mb-3">
             <input type="number" min="0" step="0.1"
-            class="form-control" id="discount"
+            class="form-control border-warning border-1 shadow" id="discount"
             formControlName="discount" placeholder="">
             <label for="discount">Descuento (€)</label>
           </div>
           <div class="d-grid gap-2">
-            <button class="btn btn-success" type="submit">Enviar</button>
-            <button class="btn btn-danger mb-4" type="button" [routerLink]="['/booking']">Cancelar</button>
+            <button class="btn-outline-info" type="submit">Enviar</button>
+            <button class="btn-outline-info mb-4" type="button" [routerLink]="['/booking']">Cancelar</button>
           </div>
         </form>
       }
     </div>
     <div class="col-md-5 col-lg-5 order-md-last">
       <h2 class="d-flex justify-content-between align-items-center mt-4 mb-4">
-        <span class="text-primary-emphasis">Tu reserva</span>
-        <span class="badge bg-primary rounded-pill">{{booking?.treatment?.title}}</span>
+        <span class="text-emphasis">Tu reserva</span>
+        <span class="badge  rounded-pill">{{booking?.treatment?.title}}</span>
       </h2>
       <ul class="list-group mb-3">
         @if (treatments) {
-        <li class="list-group-item d-flex justify-content-between lh-sm">
+        <li class="list-group-item d-flex justify-content-between lh-sm border-warning border-1 shadow">
           <div>
             <h6 class="my-0">Centro de belleza "{{booking?.company?.name}}"</h6>
               <small class="text-body-secondary">{{booking?.treatment?.price}}€</small>
           </div>
         </li>
       }
-        <li class="list-group-item d-flex justify-content-between bg-body-tertiary" nulleable="true">
+        <li class="list-group-item d-flex justify-content-between bg-body-tertiary border-warning border-1 shadow" nulleable="true">
           <div class="text-success">
             <h6 class="my-0">Promo code</h6>
             <small>EXAMPLECODE</small>
           </div>
           <span class="text-success">{{booking?.discount}}€</span>
         </li>
-        <li class="list-group-item d-flex justify-content-between">
+        <li class="list-group-item d-flex justify-content-between border-warning border-1 shadow">
           <span>Total (€)</span>
           <strong>{{booking?.treatment?.price}}€</strong>
         </li>
       </ul>
-      <form class="card p-2">
+      <form class="card p-2 border-warning border-1 shadow">
         <div class="input-group">
           <input type="text" class="form-control" placeholder="Codigo promocional">
-          <button type="submit" class="btn btn-secondary">Ingresa tu codigo</button>
+          <button type="submit" class="btn btn-warning">Ingresa tu codigo</button>
         </div>
       </form>
     </div>
