--- a/frontend/src/app/features/treatment/treatment-detail/treatment-detail.component.css
+++ b/frontend/src/app/features/treatment/treatment-detail/treatment-detail.component.css
@@ -7,3 +7,16 @@
   background-color: white;
   padding: 0px;
 }
+.btn-outline-info {
+  color: black; /* Cambia #FF0000 por tu color personalizado */
+  border-color: #CCA831; /* Usa el mismo color para el borde */
+  border-radius: 30px;
+}
+.btn-outline-info:hover {
+  color: #000000; /* Cambia el color del texto al pasar el ratón por encima, por ejemplo, a blanco */
+  background-color: #CCA831; /* Color de fondo al pasar el ratón por encima */
+  opacity: 0.8;
+}
+.text_detail {
+  color: #CCA831;
+}
