--- a/frontend/src/app/features/company/company-list/company-list.component.css
+++ b/frontend/src/app/features/company/company-list/company-list.component.css
@@ -1,13 +1,39 @@
-.btn_company{
-  background-color: #CCA831; /* Color de fondo */
+
+.btn_company2{
+  background-color: #CCA831; /* Color de fondo violeta */
   color: #000000; /* Color del texto blanco */
   /* Otros estilos según sea necesario */
   transition: opacity 0.3s ease; /* Transición de opacidad durante 0.3 segundos */
 }
 
-.btn_company:hover {
+.btn_company2:hover {
   opacity: 0.8; /* Cambia la opacidad al pasar el ratón por encima */
 }
-.btn_company:active {
+.btn_company2:active {
   opacity: 0.5; /* Cambia la opacidad al hacer clic */
+}
+.card-cover {
+  background-position: center top 20%;
+  background-size: cover;
+
+}
+.card-cover:hover {
+  opacity: 0.8; /* Cambia la opacidad al pasar el ratón por encima */
+}
+.card-cover {
+    background-position: center top 20%;
+    background-size: cover;
+
+}
+.card-cover:hover {
+    opacity: 0.8; /* Cambia la opacidad al pasar el ratón por encima */
+}
+.text_company2_list {
+  color: #FFFFFF;
+  text-shadow:
+  -1px -1px 0 #000000,
+  1px -1px 0 #000000,
+  -1px 1px 0 #000000,
+  1px 1px 0 #000000; /* Crear un borde de color */
+  /* Iba puesto en la linea 12 text-white text-shadow-1*/
 }
