--- a/frontend/src/app/features/treatment/treatment-detail/treatment-detail.component.html
+++ b/frontend/src/app/features/treatment/treatment-detail/treatment-detail.component.html
@@ -171,7 +171,7 @@
             <label for="opinion">Comentario de texto</label>
           </div>
           <div class="text-center mt-2 d-grid gap-2">
-            <button class="btn-outline-info" type="submit">Añadir comentario</button>
+            <button class="btn-outline-info mb-2" type="submit">Añadir comentario</button>
           </div>
 
         </form>
