--- a/frontend/src/app/features/treatment/treatment-form/treatment-form.component.html
+++ b/frontend/src/app/features/treatment/treatment-form/treatment-form.component.html
@@ -22,7 +22,7 @@
           <label for="title">Nombre del tratamiento</label>
         </div>
         <div class="input-group mb-3">
-          <label class="input-group-text" for="photoUrl">Foto del tratamiento</label>
+          <label class="input-group-text border-warning border-1 shadow" for="photoUrl">Foto del tratamiento</label>
           <input type="file" class="form-control border-warning border-1 shadow" id="photoUrl" (change)="onFileChange($event)">
         </div>
         <div class="form-floating mb-3">
