--- a/frontend/src/app/authentication/user-login/user-login.component.css
+++ b/frontend/src/app/authentication/user-login/user-login.component.css
@@ -3,8 +3,18 @@
     max-width: 330px;
     padding: 1rem;
 }
-.mi-boton-personalizado {
-    background-color: rgb(140, 0, 255); /* Color de fondo violeta */
-    color: #ffffff; /* Color del texto blanco */
-    /* Otros estilos según sea necesario */
+.btn-outline-info {
+  color: black; /* Cambia #FF0000 por tu color personalizado */
+  border-color: #CCA831; /* Usa el mismo color para el borde */
+  border-radius: 30px;
+}
+.btn-outline-info:hover {
+  color: #000000; /* Cambia el color del texto al pasar el ratón por encima, por ejemplo, a blanco */
+  background-color: #CCA831; /* Color de fondo al pasar el ratón por encima */
+  opacity: 0.8;
+}
+.form-check-input:hover{
+  color: #000000; /* Cambia el color del texto al pasar el ratón por encima, por ejemplo, a blanco */
+  background-color: #CCA831; /* Color de fondo al pasar el ratón por encima */
+  opacity: 0.8;
 }
