--- a/frontend/src/app/authentication/user-login/user-login.component.html
+++ b/frontend/src/app/authentication/user-login/user-login.component.html
@@ -3,27 +3,27 @@
     <form [formGroup]="loginForm" (ngSubmit)="save()">
       <!--Podemos poneer una imagen del logo aquí:
           <img class="mb-4" src="" alt="" width="72" height="57">  -->
-      <h1 class="h3 mb-3 fw-normal">Iniciar sesión</h1>
+      <h1 class="h3 mb-3 fw-normal text-center"><strong>Iniciar sesión</strong></h1>
 
       <div class="form-floating">
-        <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com" formControlName="email">
+        <input type="email" class="form-control border-warning border-1 shadow mb-2" id="floatingInput" placeholder="name@example.com" formControlName="email">
         <label for="floatingInput">Correo electrónico</label>
       </div>
       <div class="form-floating">
-        <input type="password" class="form-control" id="floatingPassword" placeholder="Password" formControlName="password">
+        <input type="password" class="form-control border-warning border-1 shadow" id="floatingPassword" placeholder="Password" formControlName="password">
         <label for="floatingPassword">Password</label>
       </div>
 
       <div class="form-check text-start my-3">
-        <input class="form-check-input" type="checkbox" value="remember-me" id="flexCheckDefault">
+        <input class="form-check-input border-warning border-1 shadow" type="checkbox" value="remember-me" id="flexCheckDefault">
         <label class="form-check-label" for="flexCheckDefault">
           Recordar sesión
         </label>
       </div>
-      <button class="btn mi-boton-personalizado w-100 py-2" type="submit">Iniciar sesión</button>
+      <button class="btn btn-outline-info w-100 py-2" type="submit">Iniciar sesión</button>
       @if (error) {
         <small class="text-danger">{{error}}</small>
       }
-      <p class="mt-5 mb-3 text-body-secondary">© 2023–2024</p>
+      <p class="mt-5 mb-3 text-emphasis text-center"><strong>© 2023–2024</strong></p>
     </form>
   </main>
