--- a/frontend/src/app/authentication/user-register/user-register.component.css
+++ b/frontend/src/app/authentication/user-register/user-register.component.css
@@ -1,10 +1,18 @@
 .form-signin {
-    max-width: 330px;
-    padding: 1rem;
-    }
-
-    .mi-boton-personalizado {
-        background-color: rgb(140, 0, 255); /* Color de fondo violeta */
-        color: #ffffff; /* Color del texto blanco */
-        /* Otros estilos según sea necesario */
-    }
+  max-width: 330px;
+  padding: 1rem;
+}
+.mi-boton-personalizado {
+  background-color: rgb(140, 0, 255); /* Color de fondo violeta */
+  color: #ffffff; /* Color del texto blanco */
+}
+.btn-outline-info {
+  color: black; /* Cambia #FF0000 por tu color personalizado */
+  border-color: #CCA831; /* Usa el mismo color para el borde */
+  border-radius: 30px;
+}
+.btn-outline-info:hover {
+  color: #000000; /* Cambia el color del texto al pasar el ratón por encima, por ejemplo, a blanco */
+  background-color: #CCA831; /* Color de fondo al pasar el ratón por encima */
+  opacity: 0.8;
+}
