--- a/frontend/src/app/features/booking/booking-detail/booking-detail.component.html
+++ b/frontend/src/app/features/booking/booking-detail/booking-detail.component.html
@@ -1,32 +1,44 @@
 @if(booking){
   <h1 class="text-center text-emphasis mt-4 mb-4"> Tú reserva </h1>
+  @if(showDeletedMessage) {
+    <div class="container col-lg-6 text-center">
+      <ngb-alert type="warning" [dismissible]="false" class="mt-5" style="min-height:80px">
+        <strong>Tú reserva ha sido cancelada correctamente.</strong>
+      </ngb-alert>
+      <button class="w-100 btn btn-outline-info btn-lg" routerLink="/booking">Volver a tus reservas</button>
+    </div>
+
+  } @else {
   <div class="card mb-3 text-emphasis border-warning border-1 shadow">
     <div class="row">
 
-      <div class="col-sm-12 col-md-12 col-lg-4">
-        <div class=" text-center">
-          <img class="d-block  mb-4  mt-2 ml-2 rounded-2"
-          [src]="'http://localhost:3000/uploads/' + booking.treatment?.image" alt="category"
-          style="max-width:350px">
+        <div class="col-sm-12 col-md-12 col-lg-4">
+          <div class=" text-center">
+            <img class="d-block  mb-4  mt-2 ml-2 rounded-2"
+            [src]="'http://localhost:3000/uploads/' + booking.treatment?.image" alt="category"
+            style="max-width:350px">
+          </div>
         </div>
-      </div>
-      <div class="col-sm-12 col-md-12 col-lg-8">
-        <div class=" text-center">
-          <h1 class="display-5 fw-bold text-body-emphasis">{{booking.treatment?.title}}</h1>
-          <div class="col-lg-6 mx-auto">
-            <p class="lead mb-4"><strong>Centro de belleza:</strong> {{booking.treatment?.company?.name}}. </p>
-            <p class="lead mb-4"><strong>Tu cita es el dia </strong> {{booking.startDate}}€. </p>
-            <p class="lead mb-4"><strong>Precio:</strong> {{booking.treatment?.price}}€. </p>
-             <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-                <button type="button"
-                class="btn btn-outline-info"
-                style="margin: 10px"
-                (click)="delete(booking)"> Cancelar reserva </button>
+        <div class="col-sm-12 col-md-12 col-lg-8">
+          <div class=" text-center">
+            <h1 class="display-5 fw-bold text-body-emphasis">{{booking.treatment?.title}}</h1>
+            <div class="col-lg-6 mx-auto">
+              <p class="lead mb-4"><strong>Centro de belleza:</strong> {{booking.treatment?.company?.name}}. </p>
+              <p class="lead mb-4"><strong>Tu cita es el dia </strong> {{booking.startDate}}€. </p>
+              <p class="lead mb-4"><strong>Precio:</strong> {{booking.treatment?.price}}€. </p>
+               <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+                  <button type="button"
+                  class="btn btn-outline-info"
+                  style="margin: 10px"
+                  (click)="delete(booking)"> Cancelar reserva </button>
+              </div>
             </div>
           </div>
         </div>
-      </div>
+
+
     </div>
   </div>
     }
+  }
 
