--- a/frontend/src/app/features/booking/booking-form/booking-form.component.html
+++ b/frontend/src/app/features/booking/booking-form/booking-form.component.html
@@ -7,18 +7,18 @@
         <h1 class="mt-4 mb-4 text-center text-emphasis">Crear reserva</h1>
       }
       @if(showConfirmMessage) {
-        <ngb-alert type="success" [dismissible]="false" class="mt-5" style="min-height:200px">
-          Has completado tu reserva de {{booking?.treatment?.title}}.
+        <ngb-alert type="warning" [dismissible]="false" class="mt-5" style="min-height:200px">
+          Has completado exitosamente tu reserva de <strong>{{booking?.treatment?.title}}</strong>.
           <br>
-          Para el dia {{booking?.startDate}}.
+          Para el dia <strong>{{booking?.startDate}}</strong>.
           <br>
-          En el centro de belleza {{booking?.company?.name}}.
+          En el centro de belleza <strong>{{booking?.company?.name}}</strong>.
           <br>
-          Por un valor de {{booking?.treatment?.price}}€.
+          Por un valor de <strong>{{booking?.treatment?.price}}€</strong>.
           <br>
-          Para cualquier duda contacte con soporte en soporte&commat;bastbeauty.com
+          Para cualquier duda contacte con soporte en <strong>soporte&commat;bastbeauty.com</strong>.
         </ngb-alert>
-        <button class="w-100 btn btn-primary btn-lg" routerLink="/booking">Volver a tratamientos</button>
+        <button class="w-100 btn btn-outline-info btn-lg" routerLink="/treatments">Volver a tratamientos</button>
       } @else {
         <form class="mt.5" [formGroup]="bookingForm" (ngSubmit)="save()">
           <input type="hidden" formControlName="id">
@@ -37,7 +37,7 @@
             <input type="datetime-local" class="form-control border-warning border-1 shadow"
             id="endDate" formControlName="endDate"
             placeholder="yyyy-mm-dd">
-            <label for="endDate">Fecha fin</label>
+            <label for="endDate">Escoge la fecha</label>
           </div>
           <div class="form-floating mb-3">
             <select class="form-select border-warning border-1 shadow"
@@ -66,9 +66,13 @@
           </select>
           <label for="treatment">Tratamiento</label>
           </div>
-          <div class="form-floating mb-3">
+          @for(treatment of treatments; track treatment.id) {
+
+          }
+          <!--<div class="form-floating mb-3">
             <input type="number" min="0" step="0.1"
-            class="form-control border-warning border-1 shadow" id="price"
+            class="form-control border-warning border-1 shadow"
+            id="price"
             formControlName="price" placeholder="">
             <label for="price">Precio (€)</label>
           </div>
@@ -77,7 +81,7 @@
             class="form-control border-warning border-1 shadow" id="discount"
             formControlName="discount" placeholder="">
             <label for="discount">Descuento (€)</label>
-          </div>
+          </div>-->
           <div class="d-grid gap-2">
             <button class="btn-outline-info" type="submit">Enviar</button>
             <button class="btn-outline-info mb-4" type="button" [routerLink]="['/booking']">Cancelar</button>
