--- a/frontend/src/app/features/user/avatar-form/avatar-form.component.html
+++ b/frontend/src/app/features/user/avatar-form/avatar-form.component.html
@@ -2,16 +2,16 @@
 	<div class="row">
 		<div class="col-lg-8">
 
-			<h1 class="my-5">Avatar de usuario</h1>
+			<h1 class="my-5">Foto de perfil</h1>
 
 			<form>
 
 				<div class="input-group mb-3">
-					<label class="input-group-text" for="photoUrl">Subir foto</label>
-					<input type="file" class="form-control" id="photoUrl" (change)="onFileChange($event)">
+					<label class="input-group-text border-warning border-1 shadow" for="photoUrl">Foto de perfil</label>
+					<input type="file" class="form-control border-warning border-1 shadow" id="photoUrl" (change)="onFileChange($event)">
 				</div>
 
-				<button class="w-100 btn btn-primary btn-lg" type="button" (click)="save()">Subir avatar</button>
+				<button class="w-100 btn-outline-info btn-lg" type="button" (click)="save()">Subir foto</button>
 
 			</form>
 
@@ -19,11 +19,11 @@
 		<div class="col-lg-4">
 
 			@if(photoPreview) {
-			<h3 class="my-5">Nuevo avatar a subir</h3>
+			<h3 class="my-5">Nueva foto de perfil</h3>
 			<img class="img-fluid" [src]="photoPreview">
 			}
 			@if (!photoPreview && user?.photoUrl) {
-			<h3 class="my-5">Avatar existente</h3>
+			<h3 class="my-5">Foto actual</h3>
 			<img class="img-fluid" [src]="'http://localhost:3000/uploads/' + user?.photoUrl">
 			}
 		</div>
