rolan_1 Frontend se atualiza footer, ancho de carousel y navbar

--- a/frontend/src/app/layout/app/app.component.html
+++ b/frontend/src/app/layout/app/app.component.html
@@ -1,7 +1,7 @@
 <app-navbar></app-navbar>
 
 
-<main style="min-height:500px;" class="container-fluid">
+<main style="min-height:500px;" class="">
   <router-outlet></router-outlet>
 </main>
 
