--- a/frontend/src/app/layout/footer/footer.component.html
+++ b/frontend/src/app/layout/footer/footer.component.html
@@ -55,13 +55,15 @@
         <div class="logo-container2 img_adecco">
           <img src="/assets/img_home/fundacion-adecco-logo.png" alt="Imagen 2" class="img-fluid">
         </div>
-        <p class="mt-2 mb-0 fw-medium text-decoration-underline">COLABORADORES</p>
+        <p class="mt-2 mb-0 fw-medium text-decoration-underline text_footer">COLABORADORES</p>
         <p class="my-0">Pilar López de Benito</p>
         <p class="my-0">Carmen Espeso Ladrón de Guevara</p>
-        <p class="my-0 fw-medium text-decoration-underline">PROFESOR</p>
-        <p class="my-0">Alan Sastre</p>
-        <p class="my-0 fw-medium text-decoration-underline">TECNOLOGÍAS UTILIZADAS</p>
-        <p class="my-0">Angular-Bootstrap-Nest-Github-VSC-SQL</p>
+        <p class="my-0 fw-medium text-decoration-underline text_footer">PROFESORES</p>
+        <p class="my-0">Alan Sastre - Daniela Estrada</p>
+        <p class="my-0 fw-medium text-decoration-underline text_footer">MENTORES</p>
+        <p class="my-0">Ariel - Ioan</p>
+        
+        
 
 
       </div>
