--- a/frontend/src/app/layout/navbar/navbar.component.html
+++ b/frontend/src/app/layout/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-body-tertiary" style="height: auto;">
+<nav class="navbar navbar-expand-lg navbar-light bg-body-tertiary p-0" style="height: auto;">
   <div class="container-fluid">
       <a class="navbar-brand fw-bold" routerLink="/">
         <img style="max-width:100px;" src="/assets/img_home/logo_bastbeauty.png" alt="logo">
